--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
   margin: 0px;
   width: 100%;
   height: 100%;
- overflow: hidden;
+  overflow: hidden;
 }
 
 dialog { 
@@ -13,6 +13,7 @@ dialog {
 canvas.fullscreen { 
   width: 100vw; 
   height: 100vh; 
+  touch-action: none;
 }
 
 button#toggleFloorPlan {
